# freenet-lepus

./: .gitignore  ANDROMICA_LEPUS_INTEGRATION.md  Cargo.toml  FREENET_LEPUS.md  LICENSE
.github/workflows/: ci.yml  contract-deploy.yml  contract-release.yml  freenet-contract-release.yml
contracts/: BUILD&DEPLOY.md  build_contract.py  build_freenet_contract.py  deploy_contract.py  deployments.json  hvym_freenet_service_args.json
contracts/datapod/: Cargo.toml
contracts/datapod/src/: lib.rs
contracts/deposit-index/: Cargo.toml
contracts/deposit-index/src/: events.rs  hash_chain.rs  lib.rs  scp.rs  tests.rs  types.rs
contracts/hvym-freenet-service/: Cargo.toml
contracts/hvym-freenet-service/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/wasm/: datapod_contract.wasm  deposit_index.wasm
crates/core/: Cargo.toml
crates/core/src/client_events/: websocket.rs
crates/core/src/config/: secret.rs
crates/core/src/operations/: get.rs  put.rs  subscribe.rs  update.rs
crates/core/src/ring/: hosting.rs  mod.rs
crates/core/src/ring/hosting/: cache.rs  deposit_index.rs  identity.rs  oracle.rs
crates/core/src/transport/: crypto.rs
crates/core/src/util/: mod.rs
docs/: LEPUS_RELEASE.md
docs/architecture/: README.md
docs/architecture/lepus/: README.md  datapod-contract.md  deposit-index-contract.md  stellar-contract.md
