[workspace]

[package]
name = "datapod-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
freenet-stdlib = { version = "0.1", features = ["contract"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4"

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []
