[workspace]

[package]
name = "deposit-index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
freenet-stdlib = { version = "0.1", features = ["contract"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
stellar-xdr = { version = "=24.0.1", default-features = false, features = ["std", "curr"] }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []

[profile.release]
opt-level = "z"
overflow-checks = true
strip = "symbols"
lto = true
codegen-units = 1
